Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,3 +11,6 @@ build-stage:
         - dotnet --version
         - dotnet restore
         - dotnet build
+    artifacts:
+        paths:
+            - "~/builds"
